# swfacade

./: README.md  stack.yaml  swfacade.cabal
src/: Main.hs
src/Data/Swfacade/: DefineBitsJPEG3.hs  DefineBitsLossless2.hs  Header.hs  RawTag.hs
