name:                swfacade
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/Javran/swfacade#readme
license:             BSD3
license-file:        LICENSE
author:              Javran Cheng
maintainer:          javran.c@gmail.com
copyright:           Copyright: (c) 2016 Javran Cheng
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable swfacade
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Data.Swfacade.Header
                     , Data.Swfacade.RawTag
                     , Data.Swfacade.DefineBitsJPEG3
  build-depends:       base
                     , bytestring
                     , mtl
                     , zlib
                     , lzma
                     , binary
                     , split
                     , deepseq
                     , friday
                     , friday-devil
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Javran/swfacade
